# rwrfhydro

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.Rmd  Precipitation-Evaluation.R  QPF_verification.R  README.Rmd  README.md  configure  configure.win  rwrfhydro.Rproj  rwrfhydro_intro.Rmd  testCasesAndVignettes.Rmd  vignettes.Rmd
R/: .calculate_.swp  .calculate_MET_measures.R.swp  :q!  CalcStatCont.R  GetNwmChannelOut.R  PolyToRaster.R  RS_get.R  ameriflux_get.R  calcStatCategorical.R  calc_chan_connectivity.R  calc_chan_connectivity2.R  calculate_MET_measures.R  calculate_aggregations.R  calculate_daily_ghcn.R  calculate_fdc.R  calculate_stats.R  calculate_stats_web.Rsh  dart_prep_streamflow.R  frxstToTimeSlice.R  frxst_gage_points_add.R  gage_gage_dist_gridded.R  gages_2.R  geospatial.R  get_RS.R  get_USCRN.R  get_active_huc.Rsh  get_ghcn.R  get_multi_ncdf.R  get_nwmChannelOut.R  get_poly.R  get_time_zone.R  ghcn_get.R  ghcn_get.html  grib_mod.R  ingest_usgs.R  latest_version.R  make_ncdf.R  mkForcingSpatialAdjFiles.R  mk_nudging_params.R  model_to_timeslice.R  (+39 more)
data/: amfMeta.rda  gages2Attr.rda  gages2AttrPlus.rda  gages2RefAttr.rda  gages2RefAttrPlus.rda  rfc.rda  snotelMeta.rda  tzLookup.rda  waveletTimingData.rda
man/: AddRouteLinkGage.Rd  AllSame.Rd  AsCharLongInt.Rd  Bias.Rd  BiasNorm.Rd  CalMetCont.Rd  CalcCOM.Rd  CalcChanConnect.Rd  CalcChanConnect2.Rd  CalcDailyGhcn.Rd  CalcDateTrunc.Rd  CalcDates.Rd  CalcFdc.Rd  CalcFdcPerf.Rd  CalcFdcSpline.Rd  CalcMeanMinrm.Rd  CalcMeanNarm.Rd  CalcMetCont.Rd  CalcMetContGrid.Rd  CalcModPerf.Rd  CalcModPerfMulti.Rd  CalcMonthDays.Rd  CalcNoahmpFluxes.Rd  CalcNoahmpWatBudg.Rd  CalcRunningMean.Rd  CalcSnodasCoords.Rd  CalcStatCategorical.Rd  CalcStatCont.Rd  CalcStatsRS.Rd  CalcStrPerf.Rd  CalcWaterYear.Rd  ChanConnToRouteLink.Rd  ChanObsToTimeSlice.Rd  CheckConn.Rd  CheckReGridConnDown.Rd  CheckReGridConnUp.Rd  ConvertBrick2NC.Rd  ConvertRS2Brick.Rd  ConvertRS2Stack.Rd  ConvertStack2NC.Rd  (+201 more)
src/: Makevars  Makevars.in  Makevars.win  generate_weights.f90  generate_weights_mesh.f90  get_gauss_grid_meta.f90  get_lambert_grid_meta.f90  get_ll_grid_meta.f90  get_polar_grid_meta.f90  grib_get_lat_lon.f90  grib_get_steps.f90  grib_grid_extract.f90  grib_grid_type.f90  regrid.f90  regrid_header.h.in
tests/: testthat.R
tools/: aclocal.m4  configure.ac  esmf.m4  grib_api.m4
tools/autom4te.cache/: output.0  requests  traces.0
vignettes/: .html  GRIB_intro.Rmd  Precipitation-Evaluation.R  Precipitation-Evaluation.Rmd  QPF_verification.Rmd  QPF_verification.html  domainChannelVis.R  domainChannelVis.Rmd  evapotranspirationEval.R  evapotranspirationEval.Rmd  evapotranspirationEval.html  geospatial.Rmd  geospatialTools.R  geospatialTools.Rmd  geospatialTools.html  getMultiNetcdf.Rmd  overview.R  (+28 more)
(+45 files in other folders)
